--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,7 @@ edition = "2018"
 crate-type = ["lib"]
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-chrono = { version = "0.4", features = ["serde"] }
+serde = { version="1.0", features=["derive"] }
+chrono = { version="0.4", features=["serde"] }
+ts-rs = { git="ssh://git@github.com/arendjr/ts-rs.git", branch="main" }
+#ts-rs = { path="../ts-rs/ts-rs" }
