--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,12 @@ crate-type = ["lib"]
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
+fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "main", features = [
+    "chrono-compat",
+] }
+#fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["chrono-compat"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-ts-rs = { git = "ssh://git@github.com/arendjr/ts-rs.git", branch = "main" }
-#ts-rs = { path="../ts-rs/ts-rs" }
 
 [dev-dependencies]
 once_cell = "1.8"
