--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,13 @@ edition = "2018"
 crate-type = ["lib"]
 
 [dependencies]
-chrono = { version = "0.4", features = ["serde"] }
 fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "main", features = [
-    "chrono-compat",
+    "time-compat",
 ] }
-#fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["chrono-compat"] }
+# fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["time-compat"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
+time = { version = "0.3", features = ["serde"] }
 
 [dev-dependencies]
 once_cell = "1.8"
