--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = 
 # fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["time-compat"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-time = { version = "0.3", features = ["serde"] }
+time = { version = "0.3", features = ["serde-human-readable"] }
 
 [dev-dependencies]
 once_cell = "1.8"
