--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ time = { version = "0.3", features = ["serde-human-readable"] }
 [dev-dependencies]
 once_cell = "1.8"
 pretty_assertions = "0.7"
+serde_json = "1.0"
