--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -17,6 +17,7 @@ fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = 
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 time = { version = "0.3", features = ["serde-human-readable"] }
+time_util = { path = "../time_util" }
 
 [dev-dependencies]
 once_cell = "1.8"
