Add base64uuid crate (#62)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,7 @@ jobs:
           --all-features 
           -p fiberplane 
           -p time_util
+          -p base64uuid
 
     - name: Run tests
       run: cargo test --verbose
