--- a/time_util/Cargo.toml
+++ b/time_util/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2018"
 crate-type = ["lib"]
 
 [dependencies]
+anyhow = "1.0.44"
 serde = { version = "1.0", features = ["derive"] }
 time = { version = "0.3", features = ["serde-human-readable"] }
 
 [dev-dependencies]
 serde_json = "1.0"
+clap = { version = "3.0.5", features = ["derive", "env", "wrap_help"] }
+time = "0.3.5"
