--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -14,12 +14,13 @@ fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = 
     "time-compat",
 ] }
 # fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["time-compat"] }
+once_cell = "1.8"
+regex = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 time = { version = "0.3", features = ["serde-human-readable"] }
 time_util = { path = "../time_util" }
 
 [dev-dependencies]
-once_cell = "1.8"
 pretty_assertions = "0.7"
 serde_json = "1.0"
