--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -14,8 +14,12 @@ fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = 
     "time-compat",
 ] }
 # fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["time-compat"] }
+lazy_static = "1.4"
 once_cell = "1.8"
-regex = "1.5"
+# Regular expressions are so-far only used for link recognization during Markdown parsing.
+# No special Unicode support is required for this, and pulling in the optimization crates
+# doesn't seem worth it, at least for FiberKit.
+regex = { version = "1.5", features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
 time = { version = "0.3", features = ["serde-human-readable"] }
