Use fp-bindgen from Crates.io (#103)
* Use fp-bindgen from Crates.io

* 1.0.0-rc.1 => 1.0.0

--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -10,9 +10,7 @@ edition = "2018"
 crate-type = ["lib"]
 
 [dependencies]
-fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "main", features = [
-    "time-compat",
-] }
+fp-bindgen = { version = "1.0.0", features = ["time-compat"] }
 # fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["time-compat"] }
 lazy_static = "1.4"
 once_cell = "1.8"
