--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -1,27 +1,30 @@
 [package]
-name = "fiberplane"
-version = "0.1.0"
 authors = ["Benno van den Berg <benno@fiberplane.com>"]
 edition = "2018"
+name = "fiberplane"
+version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
 crate-type = ["lib"]
 
+[features]
+fixtures = []
+
 [dependencies]
-fp-bindgen = { version = "1.0.0", features = ["time-compat"] }
+fp-bindgen = {version = "1.0.0", features = ["time-compat"]}
 # fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["time-compat"] }
 lazy_static = "1.4"
 once_cell = "1.8"
 # Regular expressions are so-far only used for link recognization during Markdown parsing.
 # No special Unicode support is required for this, and pulling in the optimization crates
 # doesn't seem worth it, at least for FiberKit.
-regex = { version = "1.5", features = ["std"] }
-serde = { version = "1.0", features = ["derive"] }
+regex = {version = "1.5", features = ["std"]}
+serde = {version = "1.0", features = ["derive"]}
 thiserror = "1.0"
-time = { version = "0.3", features = ["serde-human-readable"] }
-time_util = { path = "../time_util" }
+time = {version = "0.3", features = ["serde-human-readable"]}
+time_util = {path = "../time_util"}
 
 [dev-dependencies]
 pretty_assertions = "0.7"
