--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -24,8 +24,10 @@ once_cell = "1.8"
 regex = { version = "1.5", features = ["std"] }
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0"
-time = { version = "0.3", features = ["serde-human-readable"] }
-time_util = { path = "../time_util" }
+time = { version = "0.3", features = [
+    "serde-human-readable",
+    "serde-well-known",
+] }
 strum = "0.24"
 strum_macros = "0.24"
 
