Use dedicated StoredProviderResponse struct in cells (#163)

--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -28,6 +28,7 @@ time = { version = "0.3", features = [
     "serde-human-readable",
     "serde-well-known",
 ] }
+serde_bytes = "0.11"
 strum = "0.24"
 strum_macros = "0.24"
 
