Move providers here from separate repo (#179)
* Move provider protocol and implementations from separate repo

* Resolve clippies

* cargo fmt

* Install go/jsonnet tools in CI right before they're used

* Revert "Install go/jsonnet tools in CI right before they're used"

This reverts commit ca5263b7abeed09d6837f9567aebb77400dc52bc.

* Mark generated files

* Use path dependency for fiberplane crate

* cargo fmt

* Add provider protocol readme to indicate what is not generated

* Move bindings out of generated directory

* cargo fmt

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 api_client/** linguist-generated
+provider-protocol/fp-provider-runtime/src/spec/bindings.rs linguist-generated
+provider-protocol/fp-provider-runtime/src/spec/types.rs linguist-generated
+provider-protocol/fp-provider-bindings/** linguist-generated
+provider-protocol/ts-runtime/** linguist-generated
