--- a/providers/sentry/Cargo.toml
+++ b/providers/sentry/Cargo.toml
@@ -11,6 +11,8 @@ crate-type = ["cdylib"]
 form_urlencoded = "1"
 fiberplane = { path = "../../fiberplane" }
 fp-provider-bindings = { path = "../../provider-protocol/fp-provider-bindings" }
+futures = "0.3"
+rmp-serde = "1"
 rmpv = { version = "1.0.0", features = ["with-serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_bytes = "0.11"
