--- a/fp-provider-protocol/Cargo.toml
+++ b/fp-provider-protocol/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Fiberplane <info@fiberplane.com>"]
 edition = "2018"
 
 [dependencies]
+bytes = "1"
 fiberplane = { path = "../fiberplane" }
-fp-bindgen = { version = "2", features = ["generators", "serde-bytes-compat"] }
+fp-bindgen = { version = "2", features = ["bytes-compat", "generators"] }
 rmpv = "1.0"
-serde_bytes = "0.11"
