--- a/fp-provider-protocol/fp-provider-runtime/Cargo.toml
+++ b/fp-provider-protocol/fp-provider-runtime/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Fiberplane <info@fiberplane.com>"]
 edition = "2018"
 
 [dependencies]
+bytes = "1"
 fiberplane = { path = "../../fiberplane" }
 fp-bindgen-support = { version = "2.0.1", features = ["async", "host"] }
 rand = "0.8.0"
@@ -14,7 +15,6 @@ reqwest = { version = "0.11.4", default-features = false, features = [
 rmp-serde = "1.0.0"
 rmpv = { version = "1.0.0", features = ["with-serde"] }
 serde = { version = "1.0.127", features = ["derive"] }
-serde_bytes = "0.11"
 thiserror = "1.0.26"
 tokio = "1.9.0"
 tracing = "0.1.29"
