--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -16,6 +16,7 @@ fixtures = []
 base64 = "0.13"
 bytes = "1"
 clap = { version = "3", features = ["derive"] }
+form_urlencoded = "1"
 fp-bindgen = { version = "2", features = ["bytes-compat", "time-compat"] }
 # fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["time-compat"] }
 lazy_static = "1.4"
