--- a/providers/sentry/Cargo.toml
+++ b/providers/sentry/Cargo.toml
@@ -12,6 +12,7 @@ form_urlencoded = "1"
 fiberplane = { path = "../../fiberplane" }
 fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
 futures = "0.3"
+percent-encoding = "2.1"
 rmp-serde = "1"
 rmpv = { version = "1.0.0", features = ["with-serde"] }
 serde = { version = "1", features = ["derive"] }
