--- a/fp-provider-protocol/fp-provider-runtime/Cargo.toml
+++ b/fp-provider-protocol/fp-provider-runtime/Cargo.toml
@@ -18,11 +18,4 @@ serde = { version = "1.0.127", features = ["derive"] }
 thiserror = "1.0.26"
 tokio = "1.9.0"
 tracing = "0.1.29"
-wasmer = { version = "2.1", default-features = false }
-wasmer-engine-universal = { version = "2.1", features = ["compiler"] }
-
-[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
-wasmer-compiler-cranelift = { version = "2.1" }
-
-[target.'cfg(not(any(target_arch = "arm", target_arch = "aarch64")))'.dependencies]
-wasmer-compiler-singlepass = { version = "2.1" }
+wasmer = { version = "2.1", default-features = false, features = ["compiler", "singlepass"] }
