--- a/fp-markdown/Cargo.toml
+++ b/fp-markdown/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 fiberplane = { path = "../fiberplane" }
 pulldown-cmark = "0.9.1"
 pulldown-cmark-to-cmark = "10.0.1"
+time = "0.3.14"
 tracing = "0.1.34"
 
 [dev-dependencies]
