--- a/fp-templates/Cargo.toml
+++ b/fp-templates/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [features]
 default = ["convert", "expand", "examples"]
-convert = ["lazy_static", "regex"]
-expand = ["jrsonnet-evaluator", "jrsonnet-types", "thiserror", "types"]
+convert = ["lazy_static", "regex", "time"]
+expand = ["jrsonnet-evaluator", "jrsonnet-types", "thiserror", "time", "types"]
 types = ["serde", "serde_json"]
 examples = []
 
@@ -19,6 +19,7 @@ regex = { version = "1.5.5", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
 thiserror = { version = "1.0.30", optional = true }
+time = { version = "0.3.14", optional = true }
 
 [dev-dependencies]
 assert-json-diff = "2.0.1"
