Run jsonnet workflow whenever jsonnet file is changed (#214)

--- a/.github/workflows/check_jsonnet.yml
+++ b/.github/workflows/check_jsonnet.yml
@@ -3,7 +3,7 @@ name: Check Jsonnet
 on:
   push:
     branches: [ '*' ]
-    paths: [ 'templates/**/*.libsonnet' ]
+    paths: [ '**/*.libsonnet' ]
 
 jobs:
   verify:
