Update `CODEOWNERS` to include teams for the newly moved repos (#223)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,10 @@
 # By default the code is owned by the API and studio team, as they are
 # dependent on this crate
 * @fiberplane/api-devs @fiberplane/studio-devs
+
+# Provider specific stuff is owned by the plugin team
+/fp-provider-protocol/ @fiberplane/plugin-devs
+/providers/ @fiberplane/plugin-devs
+
+# Templates are owned by the template team
+/fp-templates/ @fiberplane/template-devs
