--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -17,15 +17,17 @@ base64 = "0.13"
 bytes = "1"
 clap = { version = "3", features = ["derive"] }
 form_urlencoded = "1"
-fp-bindgen = { version = "2", features = ["bytes-compat", "time-compat"] }
-# fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["time-compat"] }
+fp-bindgen = { version = "2.2", features = ["bytes-compat", "serde-json-compat", "time-compat"] }
 lazy_static = "1.4"
 once_cell = "1.8"
 # Regular expressions are so-far only used for link recognization during Markdown parsing.
 # No special Unicode support is required for this, and pulling in the optimization crates
 # doesn't seem worth it, at least for FiberKit.
 regex = { version = "1.5", features = ["std"] }
+rmpv = "1"
+rmp-serde = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 thiserror = "1.0"
 time = { version = "0.3", features = [
     "serde-human-readable",
