--- a/fp-provider-protocol/fp-provider-bindings/Cargo.toml
+++ b/fp-provider-protocol/fp-provider-bindings/Cargo.toml
@@ -12,4 +12,5 @@ once_cell = { version = "1.4" }
 rmp-serde = { version = "1.0" }
 rmpv = { version = "1.0.0", features = ["with-serde"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0" }
 time = { version = "0.3", features = ["serde-well-known"] }
