--- a/fp-provider-protocol/fp-provider-runtime/Cargo.toml
+++ b/fp-provider-protocol/fp-provider-runtime/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 bytes = "1"
 fiberplane = { path = "../../fiberplane" }
-fp-bindgen-support = { version = "2.0.1", features = ["async", "host"] }
+fp-bindgen-support = { version = "2.3", features = ["async", "host"] }
 rand = "0.8.0"
 reqwest = { version = "0.11.4", default-features = false, features = [
     "rustls-tls",
@@ -15,6 +15,7 @@ reqwest = { version = "0.11.4", default-features = false, features = [
 rmp-serde = "1.0.0"
 rmpv = { version = "1.0.0", features = ["with-serde"] }
 serde = { version = "1.0.127", features = ["derive"] }
+serde_json = "1.0"
 thiserror = "1.0.26"
 tokio = "1.9.0"
 tracing = "0.1.29"
