--- a/providers/prometheus/Cargo.toml
+++ b/providers/prometheus/Cargo.toml
@@ -8,9 +8,11 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
+const_format = "0.2"
 form_urlencoded = "1"
 fiberplane = { path = "../../fiberplane" }
 fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
+rmp-serde = "1"
 rmpv = { version = "1.0.0", features = ["with-serde"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
