Use OffsetDateTime-based Timestamps in TimeRange (#235)
* Use OffsetDateTime-based Timestamps in TimeRange

* Update OpenAPI client

* Update providers

* Update providers

* Fix runtime

* Use LegacyTimeRange for LogCell

* OpenAPI fixes

* Patch OpenAPI NewTimeRange type

* Correctly mark generated files in GitHub

--- a/fp-templates/Cargo.toml
+++ b/fp-templates/Cargo.toml
@@ -22,5 +22,5 @@ thiserror = { version = "1.0.30", optional = true }
 time = { version = "0.3.14", optional = true }
 
 [dev-dependencies]
-assert-json-diff = "2.0.1"
 lazy_static = "1.4.0"
+pretty_assertions = "1.3"
