--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -30,6 +30,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
 time = { version = "0.3", features = [
+    "macros",
     "serde-human-readable",
     "serde-well-known",
 ] }
@@ -37,5 +38,5 @@ strum = "0.24"
 strum_macros = "0.24"
 
 [dev-dependencies]
-pretty_assertions = "0.7"
+pretty_assertions = "1.3"
 serde_json = "1.0"
