--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-authors = ["Benno van den Berg <benno@fiberplane.com>"]
-edition = "2018"
 name = "fiberplane"
 version = "0.1.0"
+authors = { workspace = true }
+edition = { workspace = true }
+rust-version = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -15,10 +16,10 @@ fixtures = []
 [dependencies]
 base64 = "0.13"
 base64uuid = { path = "../base64uuid", default-features = false, features = ["fp-bindgen"] }
-bytes = "1"
+bytes = { workspace = true }
 clap = { version = "3", features = ["derive"] }
 form_urlencoded = "1"
-fp-bindgen = { version = "2.3", features = ["bytes-compat", "time-compat"] }
+fp-bindgen = { workspace = true, features = ["bytes-compat", "time-compat"] }
 # fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["time-compat"] }
 lazy_static = "1.4"
 once_cell = "1.8"
@@ -28,18 +29,14 @@ once_cell = "1.8"
 regex = { version = "1.5", features = ["std"] }
 rmpv = "1"
 rmp-serde = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+serde = { workspace = true }
 serde_bytes = "0.11"
-serde_json = "1.0"
+serde_json = { workspace = true }
 # Currently, sqlx does not export the macros without picking a runtime
 # `runtime-tokio-rustls` can be removed once https://github.com/launchbadge/sqlx/issues/1627 is resolved
 sqlx = { version = "0.6", features = ["macros", "runtime-tokio-rustls"], default-features = false, optional = true }
 thiserror = "1.0"
-time = { version = "0.3", features = [
-    "macros",
-    "serde-human-readable",
-    "serde-well-known",
-] }
+time = { workspace = true }
 strum = "0.24"
 strum_macros = "0.24"
 
