--- a/providers/proxy/Cargo.toml
+++ b/providers/proxy/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "proxy-provider"
 version = "0.1.0"
-authors = ["Fiberplane <info@fiberplane.com>"]
-edition = "2018"
+authors = { workspace = true }
+edition = { workspace = true }
+rust-version = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
