--- a/fp-markdown/Cargo.toml
+++ b/fp-markdown/Cargo.toml
@@ -2,14 +2,16 @@
 name = "fiberplane-markdown"
 description = "Utilities to convert Fiberplane Notebooks to and from Markdown"
 version = "0.1.0"
-edition = "2021"
+authors = { workspace = true }
+edition = { workspace = true }
+rust-version = { workspace = true }
 
 [dependencies]
 fiberplane = { path = "../fiberplane" }
 pulldown-cmark = "0.9.1"
 pulldown-cmark-to-cmark = "10.0.1"
-time = "0.3.14"
-tracing = "0.1.34"
+time = { workspace = true }
+tracing = { workspace = true }
 
 [dev-dependencies]
 test-case = "2.0.2"
