--- a/fp-provider-protocol/Cargo.toml
+++ b/fp-provider-protocol/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "fp-provider-protocol"
 version = "2.0.0"
-authors = ["Fiberplane <info@fiberplane.com>"]
-edition = "2018"
+authors = { workspace = true }
+edition = { workspace = true }
+rust-version = { workspace = true }
 
 [dependencies]
-bytes = "1"
+bytes = { workspace = true }
 fiberplane = { path = "../fiberplane" }
-fp-bindgen = { version = "2", features = ["bytes-compat", "generators"] }
-serde_json = "1"
+fp-bindgen = { workspace = true, features = ["bytes-compat", "generators"] }
+serde_json = { workspace = true }
