--- a/fp-provider-protocol/fp-provider-runtime/Cargo.toml
+++ b/fp-provider-protocol/fp-provider-runtime/Cargo.toml
@@ -1,22 +1,20 @@
 [package]
 name = "fp-provider-runtime"
 version = "2.0.0"
-authors = ["Fiberplane <info@fiberplane.com>"]
-edition = "2018"
+authors = { workspace = true }
+edition = { workspace = true }
 
 [dependencies]
-bytes = "1"
+bytes = { workspace = true }
 fiberplane = { path = "../../fiberplane" }
-fp-bindgen-support = { version = "2.3", features = ["async", "host"] }
+fp-bindgen-support = { workspace = true, features = ["async", "host"] }
 rand = "0.8.0"
-reqwest = { version = "0.11.4", default-features = false, features = [
-    "rustls-tls",
-] }
+reqwest = { version = "0.11.4", default-features = false, features = [ "rustls-tls" ] }
 rmp-serde = "1.0.0"
 rmpv = { version = "1.0.0", features = ["with-serde"] }
-serde = { version = "1.0.127", features = ["derive"] }
-serde_json = "1.0"
-thiserror = "1.0.26"
+serde = { workspace = true }
+serde_json = { workspace = true }
+thiserror = { workspace = true }
 tokio = "1.9.0"
-tracing = "0.1.29"
+tracing = { workspace = true }
 wasmer = { version = "2.1", default-features = false, features = ["compiler", "singlepass"] }
