--- a/fp-templates/Cargo.toml
+++ b/fp-templates/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "fp-templates"
 version = "0.1.0"
-edition = "2021"
+authors = { workspace = true }
+edition = { workspace = true }
+rust-version = { workspace = true }
 
 [features]
 default = ["convert", "expand", "examples"]
@@ -16,10 +18,10 @@ lazy_static = { version = "1.4.0", optional = true }
 jrsonnet-evaluator =  { version = "0.4.2", optional = true }
 jrsonnet-types = { version = "0.4.2", optional = true }
 regex = { version = "1.5.5", optional = true }
-serde = { version = "1.0", features = ["derive"], optional = true }
-serde_json = { version = "1.0", optional = true }
+serde = { workspace = true, optional = true }
+serde_json = { workspace = true, optional = true }
 thiserror = { version = "1.0.30", optional = true }
-time = { version = "0.3.14", optional = true }
+time = { workspace = true, optional = true }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
