--- a/providers/loki/Cargo.toml
+++ b/providers/loki/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
 name = "loki-provider"
 version = "0.1.0"
-authors = ["Fiberplane <info@fiberplane.com>"]
-edition = "2018"
+authors = { workspace = true }
+edition = { workspace = true }
+rust-version = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
 fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+serde = { workspace = true }
+serde_json = { workspace = true }
 url = { version = "2.2.2", features = ["serde"] }
