--- a/providers/prometheus/Cargo.toml
+++ b/providers/prometheus/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "prometheus-provider"
 version = "0.1.0"
-authors = ["Fiberplane <info@fiberplane.com>"]
-edition = "2018"
+authors = { workspace = true }
+edition = { workspace = true }
+rust-version = { workspace = true }
 
 [lib]
 crate-type = ["cdylib"]
@@ -14,7 +15,7 @@ form_urlencoded = "1"
 fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
 rmp-serde = "1"
 rmpv = { version = "1.0.0", features = ["with-serde"] }
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-time = { version = "0.3.4", features = ["formatting"] }
+serde = { workspace = true }
+serde_json = { workspace = true }
+time = { workspace = true, features = ["formatting"] }
 url = "2.2.2"
