--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -17,7 +17,7 @@ fixtures = []
 base64 = "0.13"
 base64uuid = { path = "../base64uuid", default-features = false, features = ["fp-bindgen"] }
 bytes = { workspace = true }
-clap = { version = "3", features = ["derive"] }
+clap = { version = "4.0.17", features = ["derive"], optional = true }
 form_urlencoded = "1"
 fp-bindgen = { workspace = true, features = ["bytes-compat", "time-compat"] }
 # fp-bindgen = { path = "../fp-bindgen/fp-bindgen", features = ["time-compat"] }
