Add authentication to Prometheus, Loki, Elasticsearch providers (#269)
* Add authentication to Prometheus, Loki, Elasticsearch providers

* Enable serde feature on Url crate

* Use HashMap::from

* Don't use slash at beginning when joining URLs

--- a/providers/loki/Cargo.toml
+++ b/providers/loki/Cargo.toml
@@ -9,6 +9,7 @@ rust-version = { workspace = true }
 crate-type = ["cdylib"]
 
 [dependencies]
+base64 = "0.13"
 fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
 serde = { workspace = true }
 serde_json = { workspace = true }
