No more legacy cells (#263)
* WIP: No more legacy cells

* Fix tests + formatting is no longer optional on cells that support it

* Update LogRecordIndex type

* Drop unused copy of generated bindings

* Update OpenAPI schema

* Allow external instantiation of Otel types

* Derive (Partial)Ord for Timestamp

* Fix form encoding in provider cells

* Cleaner encodeFormComponent() implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ bytes = { version = "1", features = ["serde"] }
 fiberplane = { path = "fiberplane" }
 fp-bindgen = { version = "2.4" }
 fp-bindgen-support = { version = "2.4" }
+once_cell = { version = "1.8" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1.0.37"
