--- a/fp-provider-protocol/fp-provider-bindings/Cargo.toml
+++ b/fp-provider-protocol/fp-provider-bindings/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 bytes = { version = "1", features = ["serde"] }
 fiberplane = { workspace = true }
 fp-bindgen-support = { version = "2.4.0", features = ["async", "guest"] }
-once_cell = { version = "1.4" }
+once_cell = { workspace = true }
 rmp-serde = { version = "1.0" }
 rmpv = { version = "1.0.0", features = ["with-serde"] }
 serde = { version = "1.0", features = ["derive"] }
