--- a/fp-templates/Cargo.toml
+++ b/fp-templates/Cargo.toml
@@ -7,14 +7,14 @@ rust-version = { workspace = true }
 
 [features]
 default = ["convert", "expand", "examples"]
-convert = ["lazy_static", "regex", "time"]
+convert = ["once_cell", "regex", "time"]
 expand = ["jrsonnet-evaluator", "jrsonnet-types", "thiserror", "time", "types"]
 types = ["serde", "serde_json"]
 examples = []
 
 [dependencies]
 fiberplane = { path = "../fiberplane"}
-lazy_static = { version = "1.4.0", optional = true }
+once_cell = { workspace = true, optional = true }
 jrsonnet-evaluator =  { version = "0.4.2", optional = true }
 jrsonnet-types = { version = "0.4.2", optional = true }
 regex = { version = "1.5.5", optional = true }
@@ -24,5 +24,5 @@ thiserror = { version = "1.0.30", optional = true }
 time = { workspace = true, optional = true }
 
 [dev-dependencies]
-lazy_static = "1.4.0"
+once_cell = { workspace = true }
 pretty_assertions = "1.3"
