Support Grafana Cloud for Prometheus and Loki providers (#276)
* Fix status check query for loki

* Fix serialization of auth enum

* Test provider config deserialization

* Log header keys

* Support queries proxied through Grafana

* Move query logic and config to grafana-common

* Use grafana common functions in prometheus

* Ignore response type when checking status

* Don't query proxy endpoint if direct query succeeds

* Use future::select instead of join

* Revert "Use future::select instead of join"

This reverts commit 82b7437dedd90d212062d622f49f67c95c002b7e.

* Remove comment from Cargo.toml file

* Send prometheus queries as post requests again

* Use one cargo config for all providers

* Log commit hash and build timestamp

* Send requests serially

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ members = [
     "providers/*",
     "time_util",
 ]
+exclude = [ "providers/.cargo"]
 
 [workspace.package]
 authors = ["Fiberplane <info@fiberplane.com>"]
@@ -28,6 +29,7 @@ serde_json = "1"
 thiserror = "1.0.37"
 time = { version = "0.3.15", features = [ "macros", "serde-human-readable", "serde-well-known" ] }
 tracing = "0.1.36"
+vergen = { version = "7.4.2", default-features = false, features = ["build", "git"] }
 
 [patch.crates-io]
 # fp-bindgen = { path = "../fp-bindgen/fp-bindgen"}
