--- a/providers/grafana-common/Cargo.toml
+++ b/providers/grafana-common/Cargo.toml
@@ -1,19 +1,13 @@
 [package]
-name = "loki-provider"
+name = "grafana-common"
 version = "0.1.0"
 authors = { workspace = true }
 edition = { workspace = true }
 rust-version = { workspace = true }
 
-[lib]
-crate-type = ["cdylib"]
-
 [dependencies]
+base64 = "0.13"
 fp-provider-bindings = { path = "../../fp-provider-protocol/fp-provider-bindings" }
-grafana-common = { path = "../grafana-common" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 url = { version = "2.2.2", features = ["serde"] }
-
-[build-dependencies]
-vergen = { workspace = true }
