--- a/providers/elasticsearch/Cargo.toml
+++ b/providers/elasticsearch/Cargo.toml
@@ -16,3 +16,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 time = { workspace = true }
 url = { version = "2.2.2", features = ["serde"] }
+
+[build-dependencies]
+vergen = { workspace = true }
