--- a/providers/sentry/Cargo.toml
+++ b/providers/sentry/Cargo.toml
@@ -19,3 +19,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 time = { workspace = true, features = ["formatting", "parsing"] }
 url = "2.2.2"
+
+[build-dependencies]
+vergen = { workspace = true }
