--- a/fiberplane/Cargo.toml
+++ b/fiberplane/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["lib"]
 [features]
 api-client = ["fiberplane-api-client"]
 base64uuid-creation = ["base64uuid/creation"]
+clap = ["fiberplane-models?/clap"]
 fixtures = ["fiberplane-ot?/fixtures"]
 fp-bindgen = ["base64uuid?/fp-bindgen", "fiberplane-models?/fp-bindgen", "fiberplane-ot?/fp-bindgen"]
 markdown = ["fiberplane-markdown"]
