--- a/providers/prometheus/Cargo.toml
+++ b/providers/prometheus/Cargo.toml
@@ -21,6 +21,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 time = { workspace = true, features = ["formatting"] }
 url = { version = "2.2.2", features = ["serde"] }
+prometheus-parser = "0.4.2"
 
 [build-dependencies]
 vergen = { workspace = true }
