--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,15 +30,15 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 thiserror = "1.0.37"
 time = { version = "0.3.15", features = [ "macros", "serde-human-readable", "serde-well-known" ] }
-tracing = "0.1.36"
+tracing = "0.1.37"
 url = { version = "2.2.2", features = ["serde"] }
 uuid = "1"
 vergen = { version = "7.4.2", default-features = false, features = ["build", "git"] }
 
 [patch.crates-io]
-# fp-bindgen = { path = "../fp-bindgen/fp-bindgen"}
-# fp-bindgen-macros = { path = "../fp-bindgen/macros"}
-# fp-bindgen-support = { path = "../fp-bindgen/fp-bindgen-support"}
-# fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "workspace-dependencies" }
-# fp-bindgen-macros = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "workspace-dependencies" }
-# fp-bindgen-support = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "workspace-dependencies" }
+#fp-bindgen = { path = "../fp-bindgen/fp-bindgen"}
+#fp-bindgen-macros = { path = "../fp-bindgen/macros"}
+#fp-bindgen-support = { path = "../fp-bindgen/fp-bindgen-support"}
+fp-bindgen = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "main" }
+fp-bindgen-macros = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "main" }
+fp-bindgen-support = { git = "ssh://git@github.com/fiberplane/fp-bindgen.git", branch = "main" }
