--- a/fiberplane-provider-protocol/fiberplane-provider-bindings/Cargo.toml
+++ b/fiberplane-provider-protocol/fiberplane-provider-bindings/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 bytes = { version = "1", features = ["serde"] }
 fiberplane-models = { workspace = true }
-fp-bindgen-support = { version = "2.4.0", features = ["async", "guest"] }
+fp-bindgen-support = { version = "3.0.0-alpha.1", features = ["async", "guest"] }
 once_cell = { workspace = true }
 rmp-serde = { version = "1.0" }
 rmpv = { version = "1.0.0", features = ["with-serde"] }
