--- a/fiberplane-markdown/Cargo.toml
+++ b/fiberplane-markdown/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "fiberplane-markdown"
 description = "Utilities to convert Fiberplane Notebooks to and from Markdown"
-version = "0.1.0"
+version = { workspace = true }
 authors = { workspace = true }
 edition = { workspace = true }
 rust-version = { workspace = true }
+license = { workspace = true }
 
 [dependencies]
 fiberplane-models = { workspace = true }
