Some fixes for publishing to Artifactory (#334)
* Some fixes for publishing to Artifactory

* Revert to main

--- a/.github/workflows/publish_to_artifactory.yml
+++ b/.github/workflows/publish_to_artifactory.yml
@@ -2,7 +2,7 @@ name: Publish to Artifactory
 
 on:
   push:
-    branches: ["Publish-to-Artifactory"]
+    branches: ["main"]
 
 env:
   CARGO_TERM_COLOR: always
