FP-2913 Automate deployments of template reference (#335)
* temp committ

* Update generate script to use bash strict mode

Use node:18 docker image

Regenerate template reference

Update sync_template_ref.yml workflow

Pin version of jsdoc-to-markdown

* add dry runs

---------

Co-authored-by: Benno van den Berg <bennovandenberg@gmail.com>

--- a/.github/workflows/check_jsonnet.yml
+++ b/.github/workflows/check_jsonnet.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Verify template docs
       working-directory: fiberplane-templates
       run: |
-        docker run --rm -v $PWD:$PWD node:17 npx -y jsdoc-to-markdown -c $PWD/jsdoc.json $PWD/fiberplane.libsonnet > docs/template_api.md
+        scripts/generate_template_docs.sh
         if ! git diff --quiet docs/template_api.md ; then
           echo "::error file=docs/template_api.md::Out of date documentation, did you forgot to regenerate it?";
           git diff;
