--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ time = { version = "0.3.15", features = [
     "serde-well-known",
 ] }
 tracing = "0.1.37"
+typed-builder = "0.12"
 url = { version = "2.2.2", features = ["serde"] }
 uuid = { version = "1", default-features = false }
 vergen = { version = "7.4.2", default-features = false, features = [
