--- a/fiberplane-models/Cargo.toml
+++ b/fiberplane-models/Cargo.toml
@@ -41,6 +41,7 @@ sqlx = { version = "0.6", default-features = false, optional = true, features = 
 ] }
 thiserror = "1.0"
 time = { workspace = true }
+typed-builder = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 strum_macros = "0.24"
 
